--- a/src/main/resources/templates/layout/admin/getTVProgramList.html
+++ b/src/main/resources/templates/layout/admin/getTVProgramList.html
@@ -23,15 +23,12 @@ a:hover {
 		<th:block th:replace="fragments/adminmid :: adminmid"></th:block>
 		<div id="layoutSidenav_content">
 			<main>
-			<!-- 여기까지는 꼭 넣어주기(어드민) 아래 footer도 있음 -->
-			
-  
-		  
+			<!-- 여기까지는 꼭 넣어주기(어드민) 아래 footer도 있음 -->  
 	 			<!-- TV프로그램 목록 -->
 	 			<div class="container-fluid px-4">
 					<h1 class="mt-4">용용플레이</h1>
 					<ol class="breadcrumb mb-4">
-						<li class="breadcrumb-item active"><a th:href="@{/insertMovie}">영화 등록하기</a></li>
+						<li class="breadcrumb-item active"><a th:href="@{/admin/insertMovie}">TV프로그램 등록하기</a></li>
 					</ol>
 									
 					
