--- a/src/main/resources/templates/layout/community/faq.html
+++ b/src/main/resources/templates/layout/community/faq.html
@@ -261,9 +261,9 @@ a {
                         <li>Wi-Fi 신호가 약해서 동영상이 잘 재생되지 않아요
                               <ul class="submenu">
                                  <li>
-                                 Wi-Fi의 신호가 약한 상태로 서비스를 이용할 경우 서비스 이용에 지연이 발생할 수 있습니다.
-                                 아래 방법을 통해 Wi-Fi 신호가 약할 경우 자동으로 모바일 데이터로 전환되는 기능을 활성화해 주세요.
-                                 *설정 방법*
+                                 Wi-Fi의 신호가 약한 상태로 서비스를 이용할 경우 서비스 이용에 지연이 발생할 수 있습니다.<br>
+                                 아래 방법을 통해 Wi-Fi 신호가 약할 경우 자동으로 모바일 데이터로 전환되는 기능을 활성화해 주세요.<br>
+                                 *설정 방법*<br>
                                  단말기 내 설정 > 연결 > Wi-Fi > 오른쪽 상단 '점 세 개' 버튼 > 고급 > Intelligent Wi-Fi 메뉴 내 '모바일 데이터로 전환' 활성화
                                  </li>                                 
                               </ul>
@@ -272,8 +272,8 @@ a {
                         <li>한도 초과라는 메시지가 뜹니다.
                               <ul class="submenu">
                                  <li>
-                                 휴대폰등 결제수단별로 월 한도금액이 있습니다. 미리 알아보신 후 이용해주시기 바랍니다.
-                                 월 한도가 있는 경우 초과시, 결제과정중 에러가 발생하여 결제가 정상처리 되지 않습니다. 
+                                 휴대폰등 결제수단별로 월 한도금액이 있습니다. 미리 알아보신 후 이용해주시기 바랍니다.<br>
+                                 월 한도가 있는 경우 초과시, 결제과정중 에러가 발생하여 결제가 정상처리 되지 않습니다. <br>
                                  </li>                                 
                               </ul>
                         </li>
@@ -281,10 +281,10 @@ a {
                         <li>해외에서 사용할 수 있나요?
                               <ul class="submenu">
                                  <li>
-                                 해외 여행객 대상 용용플레이 go 서비스 시행
-                                 - 대상 국가 : 싱가폴, 인도네시아, 말레이시아, 필리핀, 베트남, 라오스, 태국 (동남아 7개국)
-                                 - 이용 기간 : 해외에서 처음 콘텐츠를 스트리밍(재생) 시작한 시점부터 최대 7일간 이용 가능
-                                 - 제공 콘텐츠 : 용용플레이 go 서비스의 콘텐츠 제공은 지상파+종편으로 제공되며, 일부 콘텐츠는 콘텐츠 제공사의 별도 요청, 저작권 문제, 기타 사업권역 문제 등으로 제한될 수 있음
+                                 해외 여행객 대상 용용플레이 go 서비스 시행<br>
+                                 - 대상 국가 : 싱가폴, 인도네시아, 말레이시아, 필리핀, 베트남, 라오스, 태국 (동남아 7개국)<br>
+                                 - 이용 기간 : 해외에서 처음 콘텐츠를 스트리밍(재생) 시작한 시점부터 최대 7일간 이용 가능<br>
+                                 - 제공 콘텐츠 : 용용플레이 go 서비스의 콘텐츠 제공은 지상파+종편으로 제공되며, 일부 콘텐츠는 콘텐츠 제공사의 별도 요청, 저작권 문제, 기타 사업권역 문제 등으로 제한될 수 있음<br>
                                  </li>                                 
                               </ul>
                         </li>
@@ -292,8 +292,8 @@ a {
                         <li>용용플레이를 원활하게 이용하기 위한 인터넷 환경을 알려주세요
                               <ul class="submenu">
                                  <li>
-                                 용용플레이를 사용하기 위해서는 최소 2Mbps 이상의 인터넷 회선이 필요합니다.
-                                 안정적인 서비스가 이루어지기 위해서는 10Mbps급 이상의 인터넷 회선이 필요합니다.
+                                 용용플레이를 사용하기 위해서는 최소 2Mbps 이상의 인터넷 회선이 필요합니다.<br>
+                                 안정적인 서비스가 이루어지기 위해서는 10Mbps급 이상의 인터넷 회선이 필요합니다.<br>
                                  </li>                                 
                               </ul>
                         </li>
@@ -318,7 +318,7 @@ a {
                         <li>소리가 들리지 않아요.
                               <ul class="submenu">
                                  <li>
-                                 용용플레이 APP에서 화면만 나오고 소리가 안 나오는 경우 단말기의 무음 스위치가 ON되어 있을 때가 많습니다.
+                                 용용플레이 APP에서 화면만 나오고 소리가 안 나오는 경우 단말기의 무음 스위치가 ON되어 있을 때가 많습니다.<br>
                                  해당 스위치를 OFF 하신 후 다시 이용해주시기 바랍니다. 
                                  </li>                                 
                               </ul>
@@ -327,7 +327,7 @@ a {
                         <li>와이파이 환경에서 데이터요금은 어떻게 되나요?
                               <ul class="submenu">
                                  <li>
-                                 와이파이 환경에서는 데이터요금이 나가지않습니다.
+                                 와이파이 환경에서는 데이터요금이 나가지않습니다.<br>
                                  Wi-Fi/3G/LTE 네트워크 이동 환경에서 데이터 요금이 부과될 수 있사오니 요금 부과 방지를 위해서는 단말 자체 3G/LTE 설정 OFF 바랍니다. 
                                  </li>                                 
                               </ul>
@@ -336,7 +336,7 @@ a {
                         <li>동영상을 개인 또는 학교 홈페이지에 올리고 싶어요.
                               <ul class="submenu">
                                  <li>
-                                 용용플레이에서 제공하는 동영상은 저작권법의 보호를 받고 있습니다.
+                                 용용플레이에서 제공하는 동영상은 저작권법의 보호를 받고 있습니다.<br>
                                  이를 개인 또는 학교 홈페이지에 무단 링크 또는 업로드 하시면 법적인 제제를 받으시게 됩니다.
                                  </li>                                 
                               </ul>
@@ -345,7 +345,7 @@ a {
                         <li>예고편이 안나와요.
                               <ul class="submenu">
                                  <li>
-                                 용용플레이는 각 방송사에서 전송한 영상 분량을 그대로 서비스 하고 있습니다.
+                                 용용플레이는 각 방송사에서 전송한 영상 분량을 그대로 서비스 하고 있습니다.<br>
                                  몇몇 방송이 예고편이 안나오는 것이 있음을 참고하여 주시고 오류가 아님을 알려드리며
                                  오류의 여부는 용용플레이플레이어 재생시 좌측하단바의 재생시간을 비교해 보시면 알 수 있습니다.                                 
                                  </li>                                 
