--- a/src/main/resources/templates/layout/admin/getTVProgram.html
+++ b/src/main/resources/templates/layout/admin/getTVProgram.html
@@ -5,6 +5,17 @@
 <th:block th:replace="fragments/adminheader :: adminheader"></th:block>
 <!-- CSS Files -->
 <link rel="stylesheet" href="assets/css/admin.css" />
+<style>
+a {
+	color: #080808;;
+	text-decoration: none !important;
+	font-size: 15px;
+}
+
+a:hover {
+	color: #587D84;
+	}
+</style>
 </head>
 <body class="sb-nav-fixed">
 
