1/2 관리자페이지 로그아웃변경 에피소드등록페이지수정

--- a/src/main/resources/templates/fragments/adminheader.html
+++ b/src/main/resources/templates/fragments/adminheader.html
@@ -38,8 +38,7 @@
                         <li class="dropdown-item">안녕하세요</li>
                         <li class="dropdown-item">관리자님</li>
                         <li><hr class="dropdown-divider" /></li>
-                     	<li><a th:href="@{/logout}"
-									onclick="event.preventDefault(); document.getElementById('logout-form').submit();">로그아웃</a></li>
+                     	 <li class="dropdown-item"><a th:href="@{/main}">메인으로</a></li>
                     </ul>
                 </li>
             </ul>
