--- a/src/main/resources/templates/layout/community/community.html
+++ b/src/main/resources/templates/layout/community/community.html
@@ -126,7 +126,7 @@
 											<i class="fa fa-message" th:text="${board.replies.size()}"></i>
 										</div>
 									</div>
-									<span class="id" th:text="${board.member.id}"></span>
+									<span class="name" th:text="${board.member.name}"></span>
 								  </div>
 							  </a>
 							</td>
