--- a/src/main/resources/templates/layout/member/find_id.html
+++ b/src/main/resources/templates/layout/member/find_id.html
@@ -6,8 +6,8 @@
 
 <head>
 <meta charset="UTF-8">
+<title>아이디 찾기</title> 
 
-<title>아이디 찾기</title>
 </head>
 <body>
 	<div class="container">
@@ -23,25 +23,26 @@
 									<h5>이메일과 핸드폰번호를 입력해주세용.</h5>									
 								</div>
 								<div class="form-section">
-
-								<form th:action="@{/check_find_id}" method="post" name="fr">
+									<form th:action="@{/check_find_id}" method="get" name="fr">
 										<div class="input_block">
 											<h5>이메일</h5>
-											<input type="email" name="email" id="email">
+											<input type="email" name="email" id="email" placeholder="yongyong@example.com">
+											<span id="email-message"></span>
 										</div>
 										<div class="input_block">
 											<h5>핸드폰 번호</h5>
-											<input type="text" name="phone_number" id="phone_number" placeholder="'-' 제외 11자리 입력">
+											<input type="text" name="phone_number" id="phone_number" placeholder="010-1234-5678">
 											<span id="phone-message"> </span>
 										</div>
 										<input class="signin_btn" type="button" value="아이디 찾기" onclick="check_find_id()"><br>
 										<div  th:align="center">
 										<span id="searchid-message"></span><br>
-										</div> 								
+										</div> 																		
 									</form>
+									<div class="link-block">
 									<a th:href="@{/login}">로그인</a> &nbsp; &nbsp; 
-										<a th:href="@{/find_pwd}">비밀번호 찾기</a>
-									</div>					
+									<a th:href="@{/find_pwd}">비밀번호 찾기</a>
+									</div>								
 								</div>
 							</div>
 						</div>
