--- a/src/main/resources/templates/layout/member/find_pwd.html
+++ b/src/main/resources/templates/layout/member/find_pwd.html
@@ -25,7 +25,7 @@
 								</div>
 								<div class="form-section">
 
-									<form th:action="@{/check_find_pwd}" method="post">
+									<form th:action="@{/check_find_pwd}" method="get" id="pwd_form">
 										<div class="input_block">
 											<h5>아이디</h5>
 											<input type="email" name="id" id="id" placeholder="yongyong@example.com">
@@ -36,13 +36,14 @@
 										<input type="email" name="email" id="email" placeholder="yongyong@example.com">
 											<span id="findemail-message"></span>
 										</div>
-											<input class="signin_btn" type="button" value="비밀번호 찾기" onclick="check_find_pwd()"><br> <br>
+											<input class="signin_btn" type="button" value="비밀번호 재설정" onclick="check_find_pwd()"><br> <br>
 										<div  th:align="center">
 										<span id="searchpwd-message"></span><br>
-										</div> 									</form>
+										</div> 									
+									</form>
 									<div class="link-block">
-									<a th:href="@{/login}">로그인</a> &nbsp; &nbsp; 
-									<a th:href="@{/find_id}">아이디 찾기</a>
+										<a th:href="@{/login}">로그인</a> &nbsp; &nbsp; 
+										<a th:href="@{/find_id}">아이디 찾기</a>
 									</div>
 								</div>
 							</div>
