--- a/src/main/resources/templates/layout/member/modify.html
+++ b/src/main/resources/templates/layout/member/modify.html
@@ -32,6 +32,7 @@
                                <div class="input_block">
                                  <h5>비밀번호</h5>
                                  <input type="password" name="password" id="password">
+                                 <p class="join-info" id="pwd-message">비밀번호는 8-20자 이내로 영문 대소문자, 숫자, 특수문자를 반드시 하나씩 포함하여 입력해주세요.</p>
                               </div>
                               <div class="input_block">
                                  <h5 style="color: #ec6090;">이름</h5>
