--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -94,8 +94,7 @@ https://templatemo.com/tm-579-cyborg-gaming
 								<li><a href="allmovie">영화</a></li>
 								<li><a href="tvprogram">TV프로그램</a></li>
 								<li><a href="community">커뮤니티</a></li>
-								<li><a href="mypage">마이 페이지<img
-										src="assets/images/avatar-01.jpg" alt=""></a></li>
+								<li><a href="mypage">마이 페이지</a></li>
 							</ul>
 							<a class='menu-trigger'> <span>Menu</span>
 							</a>
