--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -36,17 +36,17 @@
 		</div>
 		<!-- ***** Banner End ***** -->
           
-          
-         <!-- 인기 컨텐츠 -->
+             <!-- 추천 컨텐츠 -->
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="featured-contents header-text">
 					<div class="heading-section">
-						<h3>인기컨텐츠</h3>
+						<h3>해리포터 시리즈</h3>
 					</div>
 					
                 <div class="owl-features owl-carousel">
 				<tr th:each="movie, state : ${movieList}">
+				<div th:if="${#strings.containsIgnoreCase(movie.m_title_ko, '해리')}">
                   <div class="item">
                     <div class="thumb">
                       <img th:src="@{'/assets/images/movie/' + ${movie.image_path}}" alt="">
@@ -56,6 +56,7 @@
 	                      </div>
                       	</a>
                     </div>
+                    </div>
                     <h4>[[${movie.m_title_ko}]]</h4>
                   </div>
 				</tr>
@@ -63,6 +64,32 @@
               </div>
             </div>
             
+		   <div class="row">
+			<div class="col-lg-12">
+				<div class="featured-contents header-text">
+					<div class="heading-section">
+						<h3>최신 컨텐츠</h3>
+					</div>
+					
+                <div class="owl-features owl-carousel">
+				<tr th:each="tvProgram, state : ${tvProgramList}">
+				<div th:if="${#strings.containsIgnoreCase(tvProgram.airing_period, '202')}">
+                  <div class="item">
+                    <div class="thumb">
+                      <img th:src="@{'/assets/images/tv/' + ${tvProgram.image_path}}" alt="">
+                      <a th:href="@{tvdetail(pseq=${tvProgram.pseq})}">
+	                      <div class="hover-effect">
+	                        	<h6>바로보기</h6>
+	                      </div>
+                      	</a>
+                    </div>
+                    </div>
+                    <h4>[[${tvProgram.p_title}]]</h4>
+                  </div>
+				</tr>
+                </div>
+              </div>
+            </div>
 
           
   
